@@ -1,3 +1,7 @@
+2003-04-07    John E. Joganic <john@joganic.com>
+
+	* Fixed bug in tilt filter.
+
 2003-04-07    Jimmy Yen <jimmy@yen.tp>
 
 	* Set resolutions for USB tablets.
